import uuid
from sqlalchemy import Column, String, Text, ForeignKey, DateTime, UniqueConstraint, Float, Integer, SmallInteger, UUID, \
    BigInteger
from sqlalchemy.orm import relationship
from sqlalchemy.dialects.postgresql import ARRAY
from pgvector.sqlalchemy import Vector
from database import Base
from datetime import datetime, timezone


class User(Base):
    __tablename__ = "users"

    id = Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4, index=True)
    username = Column(String, unique=True, index=True)
    native_language = Column(String, default="de")
    hashed_password = Column(String, nullable=False)

    language_learnings = relationship("LanguageLearning", back_populates="user")
    chats = relationship("Chat", back_populates="user")


class LanguageLearning(Base):
    __tablename__ = "language_learning"

    id = Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4, index=True)
    user_id = Column(UUID(as_uuid=True), ForeignKey("users.id"), nullable=False)
    learning_language = Column(String, nullable=False)
    proficiency_level = Column(String, default="A0")
    user_motivation = Column(String)

    user = relationship("User", back_populates="language_learnings")
    media = relationship("Media", back_populates="language_learning", cascade="all, delete-orphan")
    vocabularies = relationship("Vocabulary", back_populates="language_learning", cascade="all, delete-orphan")

    __table_args__ = (
        UniqueConstraint(
            "user_id",
            "learning_language"
        ),
    )


class Media(Base):
    __tablename__ = "media"

    id = Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4, index=True)
    title = Column(String, nullable=False)
    content_type = Column(String, nullable=False)  # srt, txt, pdf
    file_extension = Column(String)
    original_filename = Column(String)
    extracted_content = Column(Text)
    summary = Column(Text, nullable=True)
    topics = Column(ARRAY(String), nullable=True)
    difficulty_estimate = Column(String, nullable=True)
    genre = Column(String, nullable=True)
    detected_language = Column(String, nullable=True)
    learning_id = Column(UUID(as_uuid=True), ForeignKey("language_learning.id"), nullable=False)

    language_learning = relationship("LanguageLearning", back_populates="media")
    chats = relationship("Chat", back_populates="media", cascade="all, delete-orphan")
    media_vocabularies = relationship("MediaVocabulary", back_populates="media", cascade="all, delete-orphan")

    chunks_nomic_embed_text = relationship("MediaChunkNomicEmbedText", back_populates="media",
                                           cascade="all, delete-orphan")
    chunks_mxbai_embed_large = relationship("MediaChunkMxbaiEmbedLarge", back_populates="media",
                                            cascade="all, delete-orphan")
    chunks_text_embedding_3_small = relationship("MediaChunkTextEmbedding3Small", back_populates="media",
                                                 cascade="all, delete-orphan")
    chunks_gemini_embedding_001_768 = relationship("MediaChunkGeminiEmbedding001_768", back_populates="media",
                                                   cascade="all, delete-orphan")
    chunks_gemini_embedding_001_3072 = relationship("MediaChunkGeminiEmbedding001_3072", back_populates="media",
                                                    cascade="all, delete-orphan")

    @property
    def resolved_language(self) -> str:
        """The best-known language for this medium: the LLM-detected
        language if set, otherwise the course's nominal learning language."""
        return self.detected_language or self.language_learning.learning_language


class Vocabulary(Base):
    __tablename__ = "vocabularies"

    id = Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4, index=True)
    learning_id = Column(UUID(as_uuid=True), ForeignKey("language_learning.id"), nullable=False)
    word = Column(String, nullable=False)
    translation = Column(String)
    context_sentence = Column(Text)
    language = Column(String)
    created_at = Column(DateTime, default=lambda: datetime.now(timezone.utc))

    language_learning = relationship("LanguageLearning", back_populates="vocabularies")
    media_vocabularies = relationship("MediaVocabulary", back_populates="vocabulary", cascade="all, delete-orphan")
    cards = relationship("VocabularyCard", back_populates="vocabulary", cascade="all, delete-orphan")

    @property
    def resolved_language(self) -> str:
        """The best-known language for this word: the LLM-detected/assigned
        language if set, otherwise the course's nominal learning language."""
        return self.language or self.language_learning.learning_language


class VocabularyCard(Base):
    __tablename__ = "vocabulary_cards"

    id = Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4, index=True)
    vocabulary_id = Column(UUID(as_uuid=True), ForeignKey("vocabularies.id"), nullable=False)

    template = Column(String, nullable=True)  # 'recognition' | 'production' | 'cloze' | None
    queue = Column(String, default="new")  # 'new' | 'learning' | 'review'

    due = Column(DateTime)
    interval_days = Column(Integer, default=0)
    ease_factor = Column(Float, default=2.5)
    repetitions = Column(Integer, default=0)
    lapses = Column(Integer, default=0)

    created_at = Column(DateTime, default=lambda: datetime.now(timezone.utc))

    vocabulary = relationship("Vocabulary", back_populates="cards")
    review_logs = relationship("ReviewLog", back_populates="card", cascade="all, delete-orphan")


class ReviewLog(Base):
    __tablename__ = "review_log"

    id = Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4, index=True)
    vocabulary_card_id = Column(UUID(as_uuid=True), ForeignKey("vocabulary_cards.id"), nullable=False)

    reviewed_at = Column(DateTime, default=lambda: datetime.now(timezone.utc))
    ease = Column(SmallInteger, nullable=False)  # 1=again .. 4=easy
    interval_before = Column(Integer)
    interval_after = Column(Integer)
    ease_factor_after = Column(Float)

    card = relationship("VocabularyCard", back_populates="review_logs")


class MediaVocabulary(Base):
    __tablename__ = "media_vocabularies"

    id = Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4, index=True)
    media_id = Column(UUID(as_uuid=True), ForeignKey("media.id"), nullable=False)
    vocabulary_id = Column(UUID(as_uuid=True), ForeignKey("vocabularies.id"), nullable=False)

    media = relationship("Media", back_populates="media_vocabularies")
    vocabulary = relationship("Vocabulary", back_populates="media_vocabularies")


class Chat(Base):
    __tablename__ = "chats"

    id = Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4, index=True)
    media_id = Column(UUID(as_uuid=True), ForeignKey("media.id"), nullable=False)
    user_id = Column(UUID(as_uuid=True), ForeignKey("users.id"), nullable=False)
    title = Column(String, nullable=True)

    media = relationship("Media", back_populates="chats")
    user = relationship("User", back_populates="chats")
    chat_histories = relationship("ChatHistory", back_populates="chat", cascade="all, delete-orphan")

    @property
    def media_title(self) -> str:
        return self.media.title

    @property
    def learning_id(self):
        return self.media.learning_id

    @property
    def learning_language(self) -> str:
        return self.media.language_learning.learning_language


class ChatHistory(Base):
    __tablename__ = "chat_histories"

    id = Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4, index=True)
    chat_id = Column(UUID(as_uuid=True), ForeignKey("chats.id"), nullable=False)
    message = Column(Text, nullable=False)
    parent_id = Column(UUID(as_uuid=True), ForeignKey("chat_histories.id"), nullable=True)
    timestamp = Column(DateTime, default=lambda: datetime.now(timezone.utc))
    role = Column(String, nullable=False)  # "user" oder "assistant"
    provider = Column(Text, nullable=True)
    model = Column(Text, nullable=True)
    embedding_model = Column(Text, nullable=True)
    temperature = Column(Float, nullable=True)
    max_tokens = Column(Integer, nullable=True)
    input_tokens = Column(Integer, nullable=True)
    output_tokens = Column(Integer, nullable=True)

    chat = relationship("Chat", back_populates="chat_histories")
    parent = relationship(
        "ChatHistory",
        remote_side=[id],
        back_populates="children"
    )

    children = relationship(
        "ChatHistory",
        back_populates="parent",
        cascade="all, delete-orphan"
    )


class MediaChunkNomicEmbedText(Base):
    __tablename__ = "media_chunks_nomic_embed_text"  # nomic-embed-text, 768 dims

    id = Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4)
    media_id = Column(UUID(as_uuid=True), ForeignKey("media.id", ondelete="CASCADE"), nullable=False)
    content = Column(Text, nullable=False)
    embedding = Column(Vector(768), nullable=True)

    media = relationship("Media", back_populates="chunks_nomic_embed_text")


class MediaChunkMxbaiEmbedLarge(Base):
    __tablename__ = "media_chunks_mxbai_embed_large"  # mxbai-embed-large, 1024 dims

    id = Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4)
    media_id = Column(UUID(as_uuid=True), ForeignKey("media.id", ondelete="CASCADE"), nullable=False)
    content = Column(Text, nullable=False)
    embedding = Column(Vector(1024), nullable=True)

    media = relationship("Media", back_populates="chunks_mxbai_embed_large")


class MediaChunkTextEmbedding3Small(Base):
    __tablename__ = "media_chunks_text_embedding_3_small"  # OpenAI text-embedding-3-small, 1536 dims

    id = Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4)
    media_id = Column(UUID(as_uuid=True), ForeignKey("media.id", ondelete="CASCADE"), nullable=False)
    content = Column(Text, nullable=False)
    embedding = Column(Vector(1536), nullable=True)

    media = relationship("Media", back_populates="chunks_text_embedding_3_small")


class MediaChunkGeminiEmbedding001_768(Base):
    __tablename__ = "media_chunks_gemini_embedding_001_768"  # gemini-embedding-001, truncated to 768 dims

    id = Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4)
    media_id = Column(UUID(as_uuid=True), ForeignKey("media.id", ondelete="CASCADE"), nullable=False)
    content = Column(Text, nullable=False)
    embedding = Column(Vector(768), nullable=True)

    media = relationship("Media", back_populates="chunks_gemini_embedding_001_768")


class MediaChunkGeminiEmbedding001_3072(Base):
    __tablename__ = "media_chunks_gemini_embedding_001_3072"  # gemini-embedding-001, native 3072 dims

    id = Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4)
    media_id = Column(UUID(as_uuid=True), ForeignKey("media.id", ondelete="CASCADE"), nullable=False)
    content = Column(Text, nullable=False)
    embedding = Column(Vector(3072), nullable=True)

    media = relationship("Media", back_populates="chunks_gemini_embedding_001_3072")
