erDiagram
    chat_histories }o--|| chats: references
    chats }o--|| media: references
    media_chunks }o--|| media: references
    language_learning }o--|| users: references
    language_learning ||--o{ media: references
    media_vocabularies }o--|| media: references
    vocabularies ||--o{ media_vocabularies: references
    vocabularies }o--|| language_learning: references
    vocabularies ||--o{ vocabulary_cards: references
    vocabulary_cards ||--o{ review_log: references
    chats }o--|| users: references

    users {
        UUID id
        TEXT username
        TEXT hashed_password
        TEXT native_language
    }

    media {
        UUID id
        TEXT title
        TEXT content_type
        TEXT file_extension
        TEXT original_filename
        TEXT extracted_content
        TEXT summary
        ARRAY topics
        TEXT difficulty_estimate
        TEXT genre
        UUID learning_id
    }
    media_chunks {
        UUID id
        UUID media_id
        TEXT content
        VECTOR embedding
    }

    vocabularies {
        UUID id
        UUID learning_id
        TEXT word
        TEXT translation
        TEXT context_sentence
        TEXT language
        TIMESTAMP created_at
    }

    vocabulary_cards {
        UUID id
        UUID vocabulary_id
        TEXT template
        TEXT queue
        TIMESTAMP due
        INTEGER interval_days
        FLOAT ease_factor
        INTEGER repetitions
        INTEGER lapses
        TIMESTAMP created_at
    }

    review_log {
        UUID id
        UUID vocabulary_card_id
        TIMESTAMP reviewed_at
        SMALLINT ease
        INTEGER interval_before
        INTEGER interval_after
        FLOAT ease_factor_after
    }

    chats {
        UUID id
        UUID media_id
        UUID user_id
        TEXT title
    }

    chat_histories {
        UUID id
        UUID chat_id
        UUID parent_id
        TEXT message
        TEXT role
        TEXT provider
        TEXT model
        TEXT embedding_model
        FLOAT temperature
        INT max_tokens
        INT input_tokens
        INT output_tokens
        TIMESTAMP timestamp
    }

    language_learning {
        UUID id
        UUID user_id
        TEXT learning_language
        TEXT proficiency_level
        TEXT user_motivation
    }

    media_vocabularies {
        UUID id
        UUID media_id
        UUID vocabulary_id
    }
